File path update

--- a/resources/data_read.ipynb
+++ b/resources/data_read.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = \"/media/voit/A171-A6E6/data3488045469.dat\"\n",
+    "filename = \"/media/smb/soma-fs.ad01.caesar.de/bbo/projects/junker-bird/data3488045469.dat\"\n",
     "\n",
     "data_desc = {\n",
     "    '0x0020': { 'len': 2, 'type': np.uint32 },   # Time (ms, µs)\n",
